Restore Shipping Views

--- a/ecommerce/SimplCommerce/src/Modules/SimplCommerce.Module.ShoppingCart/Areas/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ecommerce/SimplCommerce/src/Modules/SimplCommerce.Module.ShoppingCart/Areas/ShoppingCart/Views/Cart/Index.cshtml
@@ -70,7 +70,7 @@
                     <td><strong>{{vm.cart.orderTotalString}}</strong></td>
                 </tr>
             </table>
-            <p class="text-right"><a href="~/checkout/payment" ng-class="{disabled: !vm.cart.isValid}" class="btn btn-primary">@Localizer["Process to Checkout"]</a></p>
+            <p class="text-right"><a href="~/checkout/shipping" ng-class="{disabled: !vm.cart.isValid}" class="btn btn-primary">@Localizer["Process to Checkout"]</a></p>
             <p ng-if="vm.cart.lockedOnCheckout"><button type="button" ng-click="vm.unlock()" class="btn btn-secondary active">@Localizer["Unlock cart"]</button></p>
         </div>
         <div class="coupon-form" ng-if="vm.cart.items.length">
