--- a/ecommerce/SimplCommerce/src/Modules/SimplCommerce.Module.Core/Areas/Core/Views/HomeAdmin/Index.cshtml
+++ b/ecommerce/SimplCommerce/src/Modules/SimplCommerce.Module.Core/Areas/Core/Views/HomeAdmin/Index.cshtml
@@ -137,55 +137,35 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="~/Admin" class="navbar-brand">SimplCommerce Admin</a>
+                <a href="~/Admin" class="navbar-brand">TouresBalon Admin</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @if (User.IsInRole("admin"))
                     {
                         <li class="dropdown">
-                            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Localizer["Site"] <span class="caret"></span></a>
+                            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sitio <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ui-sref="users">@Localizer["Users"]</a></li>
-                                <li><a ui-sref="vendors">@Localizer["Vendors"]</a></li>
-                                <li><a ui-sref="customergroups">@Localizer["Customer Groups"]</a></li>
-                                <li><a ui-sref="reviews">@Localizer["Reviews"]</a></li>
-                                <li><a ui-sref="review-replies">@Localizer["Review Replies"]</a></li>
-                                <li><a ui-sref="comments">@Localizer["Comments"]</a></li>
-                                <li><a ui-sref="contact-area">@Localizer["Manage Contact Area"]</a></li>
-                                <li><a ui-sref="contact">@Localizer["Manage Contact"]</a></li>
+                                <li><a ui-sref="users">Usuarios</a></li>
+                                <li><a ui-sref="customergroups">Grupos</a></li>
                             </ul>
                         </li>
                     }
                     <li class="dropdown">
-                        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Localizer["Catalog"] <span class="caret"></span></a>
+                        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catálogo <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a ui-sref="product">@Localizer["Products"]</a></li>
-                            <li><a ui-sref="product-prices">@Localizer["Product Prices"]</a></li>
+                            <li><a ui-sref="product">Productos</a></li>
+                            <li><a ui-sref="product-prices">Precios</a></li>
                             @if (User.IsInRole("admin"))
                             {
-                                <li><a ui-sref="category">@Localizer["Categories"]</a></li>
-                                <li><a ui-sref="brand">@Localizer["Brands"]</a></li>
-                                <li><a ui-sref="product-option">@Localizer["Product Options"]</a></li>
-                                <li><a ui-sref="product-attribute-group">@Localizer["Product Attribute Groups"]</a></li>
-                                <li><a ui-sref="product-attribute">@Localizer["Product Attributes"]</a></li>
-                                <li><a ui-sref="product-template">@Localizer["Product Templates"]</a></li>
+                                <li><a ui-sref="category">Categorías</a></li>
                             }
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Localizer["Sales"] <span class="caret"></span></a>
+                        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ventas<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a ui-sref="order">@Localizer["Orders"]</a></li>
-                            <li><a ui-sref="shipments">@Localizer["Shipments"]</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Localizer["Inventory"] <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a ui-sref="stocks">@Localizer["Stocks"]</a></li>
-                            <li><a ui-sref="warehouses">@Localizer["Warehouses"]</a></li>
-                            <li><a ui-sref="warehouse-manage-products">@Localizer["Manage warehouse products"]</a></li>
+                            <li><a ui-sref="order">Órdenes</a></li>
                         </ul>
                     </li>
                     @if (User.IsInRole("admin"))
@@ -213,12 +193,6 @@
                                 <li><a ui-sref="themes">@Localizer["Themes"]</a></li>
                                 <li><a ui-sref="countries">@Localizer["Countries"]</a></li>
                                 <li><a ui-sref="states-provinces">@Localizer["States or Provinces"]</a></li>
-                                <li><a ui-sref="tax-classes">@Localizer["Tax Classes"]</a></li>
-                                <li><a ui-sref="tax-rates">@Localizer["Tax Rates"]</a></li>
-                                <li><a ui-sref="shipping-providers">@Localizer["Shipping Providers"]</a></li>
-                                <li><a ui-sref="payment-providers">@Localizer["Payment Providers"]</a></li>
-                                <li><a ui-sref="configuration">@Localizer["Settings"]</a></li>
-                                <li><a ui-sref="localization">@Localizer["Translations"]</a></li>
                             </ul>
                         </li>
                     }
@@ -226,10 +200,10 @@
                 <form asp-area="Core" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a asp-area="Core" asp-controller="Manage" asp-action="Index" title="Manage">@Localizer["Hello {0}!", (await WorkContext.GetCurrentUser()).FullName]</a>
+                            <a asp-area="Core" asp-controller="Manage" asp-action="Index" title="Manage">"Hola {0}!", (await WorkContext.GetCurrentUser()).FullName</a>
                         </li>
                         <li>
-                            <button type="submit" class="btn btn-link navbar-btn navbar-link">@Localizer["Log off"]</button>
+                            <button type="submit" class="btn btn-link navbar-btn navbar-link">Cerrar Sesión</button>
                         </li>
                     </ul>
                 </form>
